small change to css, hoping to fix overlapping content on safari mobile browsers

--- a/static/css/main.scss
+++ b/static/css/main.scss
@@ -130,7 +130,9 @@ p {
     justify-content: center;
     padding: 3px;
     margin: 10px 5px;
-    font-size: $centered-info-fs;
+    p {
+        font-size: $centered-info-fs;
+    }
 }
 
 .content {
